--- a/presentation/style/desktopstyle.css
+++ b/presentation/style/desktopstyle.css
@@ -1,7 +1,6 @@
-@font-face { font-family: 'HarryP';
-             src: url('../fonts/HarryP.ttf') format('truetype'); }
+/* Styles webpages with this css */
 
-body {	
+body {
 	background-image: url('../img/backgroundpic.jpg');
 	}
 
@@ -15,7 +14,8 @@ body {
 		font-family: Calibri, Arial;
 		}
 
-header { 
+
+header {
 		height:100px;
 		background-image: url('../img/broomtastic_logo.jpg');
 		background-repeat: no-repeat;
@@ -26,7 +26,7 @@ header {
 nav {
 	height:100px;
 	width:722px;
-	background-color: #999999;
+	background-color: #0c1429;
 	float:right;
 	display: inline;
 	position: relative;
@@ -35,8 +35,8 @@ nav {
 
 /* Style The Dropdown Button */
 .dropbutton {
-	background-color: #9ba4c1;
-	color: white;
+	background-color: #19233b;
+	color: #c59646;
 	padding: 0.5em;
 	font-size: 1.5em;
 	height: 100px;
@@ -56,7 +56,7 @@ nav {
 /* Dropdown content (Hidden by Default) */
 .dropdown-content {
 	display: none;
-	background-color: #b3bbd5;
+	background-color: #9ba4c1;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
@@ -86,6 +86,8 @@ img#owl {
 		right: 0px;
 		}
 
+
+/*styles aside content on the left side*/
 aside {
 		float: left;
 		width: 278px;
@@ -93,7 +95,14 @@ aside {
 		margin-top: 3em;
 		}
 
+/*styles content of category-selects*/
+.filtercontent{
+	margin:auto;
+	width: 50%;
+}
 
+
+/*styles section content on the right side*/
 section {
 		float:right;
 		width: 722px;
@@ -102,29 +111,36 @@ section {
 		}
 
 
-table {	
-		border:1px;
-		border-color: #000000;
-		border-style: solid;
+/*styles whole tablecontent*/
+.tablecontent {	
 		margin: auto;
-		padding: 0.5em;
-		background-color: #ffffff;
+		background-color: #9ba4c1;
+		background-size: 100%;
 		width: 80%;
 	}
 
-td {	
+/*styles only tablehead-content*/
+.tablehead {
+	border:1px;
+	border-color: #000000;
+	border-style: solid;
+	font-weight: bold;
+	font-family: Arial;
+	padding: 1em;
+}
+
+/*styles only tablebody-content*/
+.tablebody {
 		border:1px;
 		border-color: #000000;
 		border-style: solid;
-		padding: 0.5em;
+		padding: 1em;
+		font-size: 0.8em;
+		font-family: Arial;
 	}
 
-.tdtitle {
-	font-weight: bold;
-}
 
-		
-footer {	
+footer {
 		background-color: #18243a;
 		clear:both;
 		text-align: center;
@@ -134,16 +150,19 @@ footer {
 		}
 
 
-h1 {	
+
+/*---styling fonts---*/
+h1 {
 	font-size: 3em;
 	text-align: center;
 	margin: 1em;
 	font-weight: normal;
-	font-family: HarryP, Calibri, Arial;
+	font-family: Calibri, Arial;
 	}
 
-/* styles 'sort by' and 'filter by' titles*/
-.titles{
+
+/* styles some titles*/
+.title1{
 	font-size: 1em;
 	text-align: center;
 	margin: 1em;
@@ -151,17 +170,21 @@ h1 {
 	font-family: Arial;
 }
 
-/* styles 'price' and 'category' titles*/
+/* style additions for title1*/
 .title2{
-	font-size: 1em;
-	text-align: center;
 	margin: 0.5em;
 	font-style: italic;
-	font-family: Arial;
+}
+.title3{
+	text-align: left;
 }
 
-/*styles content of category-selects*/
-.filtercontent{
-	margin:auto;
-	width: 50%;
+
+p{
+	margin: auto;
+	width: 80%;
+}
+
+.boldtext{
+	font-weight: bold;
 }
